# rust_raytracing

./: .gitignore  Cargo.toml  README.md
src/client/: main.rs
src/client/mainloop/: default_mainloop.rs  default_mainloop_builder.rs  deltatime_calculator.rs  mainloop_trait.rs  mod.rs
src/client/mainloop/states/: mainloop_state.rs  mod.rs  raytracing_state.rs
src/raytracing/: lib.rs
src/raytracing/examples/: cornell_box.rs  mod.rs
src/raytracing/hittables/: hittable.rs  hittable_list.rs  mod.rs  sphere.rs  triangle.rs  xy_rect.rs  xz_rect.rs  yz_rect.rs
src/raytracing/hittables/bounding/: aabb.rs
src/raytracing/hittables/bvh/: bvh_node.rs
src/raytracing/image/: buffer_converter.rs  default_image_buffer.rs  image_buffer.rs  mod.rs  ppm_converter.rs  u8_image_buffer.rs
src/raytracing/materials/: emission.rs  lambertian.rs  material.rs  mod.rs  reflective.rs  refractive.rs
src/raytracing/misc/: camera.rs  color.rs  default_rand_gen.rs  hit_record.rs  mod.rs  rand_gen.rs  ray.rs  scene.rs  tracer.rs  utils.rs
src/raytracing/scene/: camera_info.rs  emission_info.rs  hittable_info.rs  lambertian_info.rs  material_info.rs  mod.rs  reflective_info.rs  refractive_info.rs  scene_info.rs  sphere_info.rs  triangle_info.rs  xy_rect_info.rs  xz_rect_info.rs  yz_rect_info.rs
src/raytracing/thread_pool/: job.rs  mod.rs  pool.rs  trace_result.rs  worker.rs
